# SHAMS_Events

./: CMakeLists.txt  SHAMS_Events.code-workspace  ShamsEvents.hpp  library.json
Events/: CMakeLists.txt
Events/includes/: delegate.hpp  event.hpp  eventHandler.hpp  events.hpp
Events/includes/types/: eventMsg.hpp  eventQueue.hpp
Events/src/: events.cpp
Events/src/types/: eventQueue.cpp
ShamsEvent/: CMakeLists.txt  delegate.hpp  event.hpp
ShamsEvent/includes/: event.hpp
cmake/: install_libs.cmake
test/: CMakeLists.txt
test/tests/: testEvents.cpp  testQueues.cpp
